--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,16 @@
   <head>
     <title>TopPicks</title>
     <%= csrf_meta_tags %>
-
+<link href="https://fonts.googleapis.com/css?family=Bevan|Brawler" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body ng-app="app">
     <%= yield %>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.8/angular-sanitize.js"></script>
+
+
   </body>
 </html>
