music section now drills down an additional level by making new request to last.fm album details

--- a/app/assets/templates/music/music.html
+++ b/app/assets/templates/music/music.html
@@ -1,13 +1,24 @@
-TESTING MUSIC PAGE!
 <div ng-controller="MusicController as music" id="music-div">
   <h1> Top Albums </h1>
 
   <input ng-model="search"></input><button id="music-button" ng-click="searchRecord()">go</button>
 
-	<div ng-repeat="album in music.data.topalbums.album | orderBy:'-playcount' | limitTo:3" >
-   <h2> Name: {{ album.name }} </h2>
-  <img src={{album.image[2]["#text"]}} alt=""></img>
-  <h4> Number of Plays on Last.fm: {{album.playcount.toLocaleString()}} </h4>
-  <h4><a href="{{album.url}}">Learn more</a></h4>
+
+    <div ng-repeat="record in full | orderBy:'-record.data.album.playcount'">
+    <div class="record-title">
+        <h2> {{record.data.album.name}} </h2>
+    </div>
+    <div class="record-img">
+      <img src={{record.data.album.image[3]["#text"]}} alt=""></img>
+    </div>
+    <div class="record-info">
+      <h4> Number of Plays on Last.fm: {{record.data.album.playcount.toLocaleString()}} </h4>
+      <h4>Number of Listeners: {{record.data.album.listeners.toLocaleString()}}</h4>
+      <h4><a href="{{record.data.album.url}}">View on Last.fm</a></h4>
+      <button ng-click="showDetails()">more</button><br>
+        <div style="display: {{style}}">
+          {{record.data.album.wiki.content}}
+        </div>
+    </div>
 </div>
 </div>
