added navbar and styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,18 @@
   </head>
 
   <body ng-app="app">
+    <div id="navbar">
+    <nav>
+      <ul>
+      <li>log out</li>
+      <li>my list</li>
+      <li>about</li>
+      <li>music</li>
+      <li>film</li>
+      <li>home</li>
+    </ul>
+    </nav>
+        </div>
     <%= yield %>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.8/angular-sanitize.js"></script>
 
