--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -3,14 +3,32 @@ body {
   background-color: gainsboro;
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-nav li {
+nav {
+  position: fixed;
+  background-color: darkgreen;
+  color: white;
+  width: 100%;
+  padding: 0px 0px;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0px 0px;
+  width: 100%;
+}
+nav ul li {
   list-style-type: none;
-  float: left;
+  float: right;
   display: inline-block;
-  padding-right: 2%;
   font-family: 'Brawler', serif;
+  margin-left: 1%;
+  margin-bottom: 1%;
+  margin-top: 1%;
+  padding-right: 1%;
 
 }
 
@@ -114,6 +132,11 @@ h1 {
 #music-div input {
   font-family: 'Brawler', serif;
   font-size: 40px;
+}
+
+#music-div h1 {
+  margin-top: 0;
+  padding-top: 10%;
 }
 
 #music-button {
