--- a/app/assets/templates/home.html.erb
+++ b/app/assets/templates/home.html.erb
@@ -1,6 +1,10 @@
-<h1>The Home View!</h1>
-<ul>
-    <li ng-repeat="thing in things">
-        {{thing}}
-    </li>
-</ul>
+
+<div class="headline">
+<h1>welcome to gubbinal</h1>
+
+</div>
+
+<div class="opening-info">
+  <h2>discover artists' top records and directors' top films</h2>
+  <h2>keep track of the ones you want to remember</h2>
+</div>
