changed a href values to ui-sref

--- a/app/assets/templates/navbar.html
+++ b/app/assets/templates/navbar.html
@@ -2,15 +2,15 @@
 <nav>
   <ul>
 
-  <li><a href="#">{{ isNotLoggedIn() }}</a></li>
-  <li><a href="#!/sign_up">{{ isLoggedIn() }}</a></li>
-  <li><a href="#!/users/{{userPath}}">{{hasList()}}</a></li>
+  <li style="{{isLoggedIn()}}"><a ng-click="logMeOut()" href="">log out</a></li>
+  <li style="{{isNotLoggedIn()}}"><a href="#!/sign_up">log in</a></li>
+  <li style="{{hasList()}}"><a href="#!/users/{{userPath}}">my list</a></li>
+  <li><a href="" ui-sref="about">about</a></li>
+  <li><a href="" ui-sref="music">music</a></li>
+  <li><a href="" ui-sref="film">film</a></li>
+  <li><a href="" ui-sref="home">home</a></li>
 
-
-  <li><a href="#!/about">about</a></li>
-  <li><a href="#!/music">music</a></li>
-  <li><a href="#!/film">film</a></li>
-  <li><a href="/">home</a></li>
+  <li> {{ userPath }} </li>
 </ul>
 </nav>
     </div>
