--- a/app/assets/templates/users/list.html
+++ b/app/assets/templates/users/list.html
@@ -1,14 +1,16 @@
 <div id="welcome-back">
-  <h1> Welcome Back, {{ userName }} </h1>
+  <h1> Hi there, {{ userName }} </h1>
 </div>
 
 <div id="music-list">
 <h2>Listened to any good music?</h2>
 <i class="fa fa-volume-up" aria-hidden="true"></i><br>
-<button id="music-list-button">my music list</button>
+<button id="music-list-button" ng-click="scrollToMusic()">my music list</button>
 </div>
 <div id="movie-list">
 <h2>Watched any good films? </h2>
 <i class="fa fa-camera-retro" aria-hidden="true"></i><br>
 <button id="film-list-button">my film list</button>
 </div>
+
+<div ui-view></div>
