--- a/app/assets/templates/users/list.html
+++ b/app/assets/templates/users/list.html
@@ -10,7 +10,7 @@
 <div id="movie-list">
 <h2>Watched any good films? </h2>
 <i class="fa fa-camera-retro" aria-hidden="true"></i><br>
-<button id="film-list-button">my film list</button>
+<button id="film-list-button" ng-click="scrollToMovies()">my film list</button>
 </div>
 
 <div ui-view></div>
