--- a/app/assets/templates/users/music-list.html
+++ b/app/assets/templates/users/music-list.html
@@ -16,10 +16,10 @@
       <div class="record-img">
         <img src="{{record.img}}" alt="">
       </div>
-  <div class="record-info">
+  <div class="record-info smaller-list-info">
       <h3> {{ record.artist}} </h3>
       <h3> {{ record.content}} </h3>
-    <button ng-click="removeRecord()">remove</button>
+    <button ng-click="removeRecord(record.artist, record.content, 'music')">remove</button>
       </div>
     </ul>
 
