added links and content to about and index pages

--- a/app/assets/templates/about.html
+++ b/app/assets/templates/about.html
@@ -2,7 +2,12 @@
 <br>
 <br>
 <br>
+<br>
 
 <h1> this is gubbinal. </h1>
 
-<h2> a description will probably come later. until then, enjoy. </h2> 
+<h2 class="about"> a description is coming soon.<br>but until then, enjoy discovering some new musicians and directors. </h2>
+<br>
+<br>
+<br>
+<img src="https://s24.postimg.org/oroo9madh/cwkin6_qpdi_samuel_zeller.jpg" alt="">
