--- a/app/assets/templates/home.html.erb
+++ b/app/assets/templates/home.html.erb
@@ -5,6 +5,8 @@
 </div>
 
 <div class="opening-info">
-  <h2>discover artists' top records and directors' top films</h2>
-  <h2>keep track of the ones you want to remember</h2>
+  <h2>discover artists' top records and directors' top films.</h2>
+  <h2>keep track of the ones you want to remember.</h2>
+  <a href="#" ui-sref="music">search musicians</a><br><br><a href="#" ui-sref="film">search directors</a>
+
 </div>
