--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,5 +1,8 @@
-<!-- <div ng-view>
-</div> -->
-
 <div ui-view>
+  <div id="the-welcome">
+  <h1>welcome to gubbinal</h1>
+  <h2>discover artists' top records and directors' top films.</h2>
+  <h2>keep track of the ones you want to remember</h2>
+  <a href="#" ui-sref="music">search musicians</a><br><br><a href="#" ui-sref="film">search directors</a>
+</div>
 </div>
