using $localstorage and $watch to dynamically set navbar links

--- a/app/assets/templates/users/sign_up.html.erb
+++ b/app/assets/templates/users/sign_up.html.erb
@@ -2,10 +2,11 @@
 <br>
 <br>
 <br>
-
+<br>
+<br>
 
 <h1> Create Your Very Own Gubbinal Account </h1>
-<h2> Track movies you want to see and records you want to hear. </h2>
+<h2 class="about"> Track movies you want to see<br>and records you want to hear. </h2>
 <br>
 
 
