--- a/app/assets/templates/movies/movie.html
+++ b/app/assets/templates/movies/movie.html
@@ -3,7 +3,7 @@
   <input ng-model="searchTerm"></input><button id="go-button" ng-click="findFilm()">go</button>
   <h2 id="movie-fail">{{movieFail}}</h2>
 
-  <div ng-repeat="movie in film.reviews | orderBy:'-data.vote_average'| limitTo: 3 ">
+  <div ng-repeat="movie in film.reviews | orderBy:'-data.vote_average'| limitTo: 3 track by $index ">
     <div class="movie-title">
       <h2>{{ movie.data.title }}</h2>
     </div>
@@ -18,8 +18,9 @@
     <p><a href="http://www.imdb.com/title/{{movie.data.imdb_id}}" target="_blank">IMDB link</a>
     <p>Release Date: {{movie.data.release_date | date:'shortDate'}} </p>
     <p>Original Title: {{movie.data.original_title}}</p>
-  <button class="add-movie" ng-click="addToMovieList(movie.data.title, movie.data.poster_path)">add to list</button>
+  <button class="add-movie" ng-click="addToMovieList(movie.data.title, movie.data.poster_path, $index)">add to list</button>
     <h3>{{ moviePost }}</h3>
+    <h3>{{ message[$index] }}</h3>
       </div>
 
   </div>
