--- a/app/assets/templates/music/music.html
+++ b/app/assets/templates/music/music.html
@@ -4,7 +4,7 @@
   <input ng-model="search"></input><button id="music-button" ng-click="searchRecord()">go</button>
   <h2 id="music-fail"> {{musicFail}}</h2>
 
-    <div ng-repeat="record in full | orderBy: orderThings : true">
+    <div ng-repeat="record in full | orderBy: orderThings : true track by $index">
 
     <div class="record-title">
         <h2> {{record.data.album.name}} </h2>
@@ -19,8 +19,8 @@
         <div>
           <p class="record-summary" ng-bind-html="record.data.album.wiki.content"></p>
         </div>
-        <button ng-click="addToList(record.data.album.artist,record.data.album.name, record.data.album.image[3]['#text'], $index)">Add to My List</button><br>
-        <h3 id="after-post">{{ afterPost }}</h3>
+        <button ng-click="addToList(record.data.album.artist, record.data.album.name, record.data.album.image[3]['#text'], $index)">Add to My List</button><br>
+        <h3 id="after-post">{{ message[$index] }}</h3>
     </div>
 </div>
   <p id="music-foot">All data provided by Last.fm</p>
