added successfully deleted text once user deletes item

--- a/app/assets/templates/users/movie-list.html
+++ b/app/assets/templates/users/movie-list.html
@@ -5,8 +5,9 @@
 
 
   <div class="records-to-remember">
+    <h2>{{ deleteMessage }}</h2>
     <input type="text" class="music-searchbox" placeholder="search through your list" ng-model="searchMovies"></input>
-    <ul ng-repeat="film in listData | filter:searchMovies">
+    <ul ng-repeat="film in listData | filter:searchMovies track by $index">
       <div class="record-img">
         <img src="https://image.tmdb.org/t/p/w185{{film.img}}"></img>
       </div>
