--- a/app/assets/templates/movies/movie.html
+++ b/app/assets/templates/movies/movie.html
@@ -1,7 +1,13 @@
 <div ng-controller="MovieController as film" id="movie-div">
   <h1>search a director.</h1>
-  <input ng-model="searchTerm"></input><button id="go-button" ng-click="findFilm()">go</button>
-  <h2 id="movie-fail">{{movieFail}}</h2>
+  <form name="movieForm" ng-submit="findFilm()">
+  <input ng-model="searchTerm" ng-minlength="5" name="query" required="required"></input><button id="go-button" ng-click="">go</button>
+</form>
+<h2 id="movie-fail">{{movieFail}}</h2>
+
+<!-- <div ng-if="movieForm.query.$touched && movieForm.query.$error.minlength">
+    <h2 id="movie-fail">Search must be more than 5 letters!</h2>
+</div> -->
 
   <div ng-repeat="movie in film.reviews | orderBy:'-data.vote_average'| limitTo: 3 track by $index ">
     <div class="movie-title">
